# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("ipc") {
  sources = [
    "gpu_command_buffer_traits.cc",
    "gpu_command_buffer_traits.h",
  ]

  configs += [ "//third_party/khronos:khronos_headers" ]

  deps = [
    "//gpu/command_buffer/common",
    "//ipc",
  ]
}
